--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="css/design.css">
     <link rel="stylesheet" href="css/design_desktop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,22 +20,71 @@
  <span class="ffm fs_largebold">A la française</span><i class="far fa-heart heart_menu"></i>  
 <span class="brd_bottom">ENTREES</span>
  <div class="menu_card">
-     <div class="nom">
+    <div class="nom">
      <span class="fs_normal">Tartare de poulpe acidulé </span><br>
-        <span class="pdg_top">Aux zestes d'orange</span></div>    
-     <div class="visible"><span class="prixbold">25€</span></div>
+     <span class="pdg_top over fs_small">Aux zestes d'orange</span>
+   </div>
+     <div class="visible"><span class="prixbold">35€</span></div>
      <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Velouté de légumes d'antan </span><br>
+           <span class="pdg_top over fs_small">Carotte, panais, topinambour</span></div>    
+        <div class="visible"><span class="prixbold">25€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Soupe à l'oignon </span><br>
+           <span class="pdg_top over fs_small">Revisitée</span></div>    
+        <div class="visible"><span class="prixbold">20€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
  <span class="brd_bottom">PLATS</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Coquilles Saint-Jacques </span><br>
+           <span class="pdg_top over fs_small">Accompagnées d'une purée de panais</span></div>    
+        <div class="visible"><span class="prixbold">40€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Magret de canard </span><br>
+           <span class="pdg_top over fs_small">Et parmentier de pommes de terre</span></div>    
+        <div class="visible"><span class="prixbold">35€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Pigeonneau d’Ille-et-Vilaine</span><br>
+           <span class="pdg_top over fs_small">Sur son lit de gnocchis aux légumes</span></div>    
+        <div class="visible"><span class="prixbold">44€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
  <span class="brd_bottom">DESSERTS</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div> 
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Pétales de violettes glacés </span><br>
+           <span class="pdg_top over fs_small">Et purée de noisettes</span></div>    
+        <div class="visible"><span class="prixbold">18€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Fondant au chocolat</span><br>
+           <span class="pdg_top over fs_small">Revisité</span></div>    
+        <div class="visible"><span class="prixbold">22€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Millefeuille croustillant </span><br>
+           <span class="pdg_top over fs_small">Myrtilles et pâte d’amande</span></div>    
+        <div class="visible"><span class="prixbold">23€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div> 
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
 </div>
 <div class="footer flex">
