--- a/menu1.html
+++ b/menu1.html
@@ -18,19 +18,112 @@
 <div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="/images/logo/ohmyfood@2x.svg" alt="logo"></div>
 <div class="img_menu"><img src="/images/restaurants/note.jpg" alt="logo" class="img_menu mrg_img_menu"></div>
  <div class="card_container flex menu mrg_img_menu1">
- <span class="ffm fs_largebold">La note enchantée</span><i class="far fa-heart heart_menu"></i>  
+ <span class="ffm fs_largebold">La note enchantée</span>
+ <svg aria-hidden="true"
+ focusable="false"
+ data-prefix="fas"
+ data-icon="heart"
+ class="svg-inline--fa fa-heart fa-w-16"
+ role="img"
+ xmlns="http://www.w3.org/2000/svg"
+ viewbox="0 0 512 512">
+ <path fill="currentColor"
+ d="M462.3 62.6C407.5 15.9 326 24.3
+ 275.7 76.2L256 96.5l-19.7-20.3C186.1
+ 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1
+ 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8
+ 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
+ </path></svg>
+ <div class="menu_container flex">
 <span class="brd_bottom">ENTREES</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
+ <div class="menu_card">
+    <div class="nom">
+    <span class="fs_normal">Ravioles de foie gras  </span><br>
+    <span class="pdg_top over fs_small">Accompagnés de leur crème à la truffe</span>
+    </div>
+    <div class="visible"><span class="prixbold">25€</span></div>
+    <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+    </div>
+ <div class="menu_card1">
+    <div class="nom">
+    <span class="fs_normal">Caviar osciètre  </span><br>
+    <span class="pdg_top over fs_small">Sur blini à la farine de blé noir</span>
+    </div>
+    <div class="visible"><span class="prixbold">35€</span></div>
+    <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+</div>
+ <div class="menu_card2">
+    <div class="nom">
+        <span class="fs_normal">Homard et espuma de potiron </span><br>
+        <span class="pdg_top over fs_small">Mariné aux zestes d'orange</span>
+        </div>
+        <div class="visible"><span class="prixbold">20€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+
+ <div class="menu_card3">
+    <div class="nom">
+        <span class="fs_normal">Foie gras de canard cuit entier </span><br>
+        <span class="pdg_top over fs_small">Confiture de figue et pain toasté</span>
+        </div>
+        <div class="visible"><span class="prixbold">35€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+</div>
+<div class="menu_container flex">
  <span class="brd_bottom">PLATS</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Noix de coquilles Saint-Jacques </span><br>
+        <span class="pdg_top over fs_small">Sur lit de purée de céleri-rave</span>
+        </div>
+        <div class="visible"><span class="prixbold">40€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card1">
+    <div class="nom">
+        <span class="fs_normal">Langoustine poêlée </span><br>
+        <span class="pdg_top over fs_small">Purée de patate douce</span>
+        </div>
+        <div class="visible"><span class="prixbold">35€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card2">
+    <div class="nom">
+        <span class="fs_normal">Mijoté de queue de boeuf  </span><br>
+        <span class="pdg_top over fs_small">Et riz sauvage aux zestes de citron</span>
+        </div>
+        <div class="visible"><span class="prixbold">44€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+</div>
+<div class="menu_container flex">
  <span class="brd_bottom">DESSERTS</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div> 
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Macaron noisette et chocolat </span><br>
+        <span class="pdg_top over fs_small">Glace au caramel brun et sel de Guérande</span>
+        </div>
+        <div class="visible"><span class="prixbold">18€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card1">
+    <div class="nom">
+        <span class="fs_normal">Baba au rhum revisité  </span><br>
+        <span class="pdg_top over fs_small">Avec son coulis de citron</span>
+        </div>
+        <div class="visible"><span class="prixbold">22€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card2">
+    <div class="nom">
+        <span class="fs_normal">Tarte au citron meringuée </span><br>
+        <span class="pdg_top over fs_small">Déstructurée</span>
+        </div>
+        <div class="visible"><span class="prixbold">23€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div> 
+</div>
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
 </div>
 <div class="footer flex">
