--- a/menu3.html
+++ b/menu3.html
@@ -20,17 +20,80 @@
  <div class="card_container flex menu">
  <span class="ffm fs_largebold">Le delice des sens</span><i class="far fa-heart heart_menu"></i>  
 <span class="brd_bottom">ENTREES</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
+ <div class="menu_card">
+ <div class="nom">
+    <span class="fs_normal">Tartare de thon</span><br>
+    <span class="pdg_top over fs_small">Assaisonné au yuzu</span>
+    </div>
+    <div class="visible"><span class="prixbold">25€</span></div>
+    <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+    </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Bouchée de homard croustillant </span><br>
+        <span class="pdg_top over fs_small">Et sa farandole de petits légumes</span>
+        </div>
+        <div class="visible"><span class="prixbold">35€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Velouté de cèpes </span><br>
+        <span class="pdg_top over fs_small">Aux truffes</span>
+        </div>
+        <div class="visible"><span class="prixbold">20€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
  <span class="brd_bottom">PLATS</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Poulet rôti aux herbes de Provence </span><br>
+        <span class="pdg_top over fs_small">Et sa crème de truffe</span>
+        </div>
+        <div class="visible"><span class="prixbold">40€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Langouste rôtie </span><br>
+        <span class="pdg_top over fs_small">Et ses légumes de saison</span>
+        </div>
+        <div class="visible"><span class="prixbold">35€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Côte de boeuf Angus</span><br>
+        <span class="pdg_top over fs_small">Et sa purée de panais</span>
+        </div>
+        <div class="visible"><span class="prixbold">44€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
  <span class="brd_bottom">DESSERTS</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div> 
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Farandole de desserts</span><br>
+        <span class="pdg_top over fs_small">Du chef</span>
+        </div>
+        <div class="visible"><span class="prixbold">18€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Crème brulée</span><br>
+        <span class="pdg_top over fs_small">Revisitée</span>
+        </div>
+        <div class="visible"><span class="prixbold">22€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Tiramisu </span><br>
+        <span class="pdg_top over fs_small">À la noisette</span>
+        </div>
+        <div class="visible"><span class="prixbold">23€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div> 
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
 </div>
 <div class="footer flex">
