--- a/menu2.html
+++ b/menu2.html
@@ -20,17 +20,80 @@
  <div class="card_container flex menu">
  <span class="ffm fs_largebold">La palette du goût</span><i class="far fa-heart heart_menu"></i>  
 <span class="brd_bottom">ENTREES</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Fricassée d'escargot</span><br>
+        <span class="pdg_top over fs_small">Au piment d'Espelette </span>
+        </div>
+        <div class="visible"><span class="prixbold">25€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card1">
+    <div class="nom">
+        <span class="fs_normal">Foie gras de canard mi-cuit</span><br>
+        <span class="pdg_top over fs_small">Et ses copeaux de truffe noire</span>
+        </div>
+        <div class="visible"><span class="prixbold">35€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card2">
+    <div class="nom">
+        <span class="fs_normal">Oeuf au plat</span><br>
+        <span class="pdg_top over fs_small">Assaisonné à la truffe sur lit de caviar</span>
+        </div>
+        <div class="visible"><span class="prixbold">20€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
  <span class="brd_bottom">PLATS</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Filet de boeuf aux herbes</span><br>
+        <span class="pdg_top over fs_small">Accompagné de sa ribambelle de légumes</span>
+        </div>
+        <div class="visible"><span class="prixbold">40€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card1">
+    <div class="nom">
+        <span class="fs_normal">Parmentier de queue de boeuf</span><br>
+        <span class="pdg_top over fs_small">À la truffe noire sur sa purée de panais</span>
+        </div>
+        <div class="visible"><span class="prixbold">35€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card2">
+    <div class="nom">
+        <span class="fs_normal">Filet de turbot</span><br>
+        <span class="pdg_top over fs_small">Aux agrumes</span>
+        </div>
+        <div class="visible"><span class="prixbold">44€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
  <span class="brd_bottom">DESSERTS</span>
- <div class="menu_card"></div>
- <div class="menu_card"></div>
- <div class="menu_card"></div> 
+ <div class="menu_card">
+    <div class="nom">
+        <span class="fs_normal">Paris-Brest</span><br>
+        <span class="pdg_top over fs_small">Revisité</span>
+        </div>
+        <div class="visible"><span class="prixbold">18€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card1">
+    <div class="nom">
+        <span class="fs_normal">Macaron au chocolat d'exception</span><br>
+        <span class="pdg_top over fs_small">Assaisonné à la truffe sur lit de caviar</span>
+        </div>
+        <div class="visible"><span class="prixbold">20€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div>
+ <div class="menu_card2">
+    <div class="nom">
+        <span class="fs_normal">Mousse au chocolat </span><br>
+        <span class="pdg_top over fs_small">Au piment d'Espelette et à la truffe noire</span>
+        </div>
+        <div class="visible"><span class="prixbold">23€</span></div>
+        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+ </div> 
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
 </div>
 <div class="footer flex">
