--- a/menu2.html
+++ b/menu2.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/design.css">
     <link rel="stylesheet" href="css/design_desktop.css">
+    <link rel="stylesheet" href="sass/design_tablet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +20,7 @@
 <div class="img_menu"><img src="/images/restaurants/gout.jpg" alt="logo" class="img_menu"></div>
  <div class="card_container flex menu">
  <span class="ffm fs_largebold">La palette du goût</span><i class="far fa-heart heart_menu"></i>  
+ <div class="menu_container flex">
 <span class="brd_bottom">ENTREES</span>
  <div class="menu_card">
     <div class="nom">
@@ -28,6 +30,7 @@
         <div class="visible"><span class="prixbold">25€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
+
  <div class="menu_card1">
     <div class="nom">
         <span class="fs_normal">Foie gras de canard mi-cuit</span><br>
@@ -44,6 +47,8 @@
         <div class="visible"><span class="prixbold">20€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
+</div>
+<div class="menu_container flex">
  <span class="brd_bottom">PLATS</span>
  <div class="menu_card">
     <div class="nom">
@@ -69,6 +74,8 @@
         <div class="visible"><span class="prixbold">44€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
+</div>
+<div class="menu_container flex">
  <span class="brd_bottom">DESSERTS</span>
  <div class="menu_card">
     <div class="nom">
@@ -94,6 +101,7 @@
         <div class="visible"><span class="prixbold">23€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div> 
+</div>
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
 </div>
 <div class="footer flex">
