--- a/menu3.html
+++ b/menu3.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/design.css">
     <link rel="stylesheet" href="css/design_desktop.css">
+    <link rel="stylesheet" href="sass/design_tablet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +20,8 @@
 <div class="img_menu"><img src="/images/restaurants/delice.jpg" alt="logo" class="img_menu"></div>
  <div class="card_container flex menu">
  <span class="ffm fs_largebold">Le delice des sens</span><i class="far fa-heart heart_menu"></i>  
-<span class="brd_bottom">ENTREES</span>
+ <div class="menu_container flex">
+ <span class="brd_bottom">ENTREES</span>
  <div class="menu_card">
  <div class="nom">
     <span class="fs_normal">Tartare de thon</span><br>
@@ -28,7 +30,8 @@
     <div class="visible"><span class="prixbold">25€</span></div>
     <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
     </div>
- <div class="menu_card">
+ </div>
+ <div class="menu_card1">
     <div class="nom">
         <span class="fs_normal">Bouchée de homard croustillant </span><br>
         <span class="pdg_top over fs_small">Et sa farandole de petits légumes</span>
@@ -36,7 +39,7 @@
         <div class="visible"><span class="prixbold">35€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card2">
     <div class="nom">
         <span class="fs_normal">Velouté de cèpes </span><br>
         <span class="pdg_top over fs_small">Aux truffes</span>
@@ -44,6 +47,8 @@
         <div class="visible"><span class="prixbold">20€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
+
+ <div class="menu_container flex">
  <span class="brd_bottom">PLATS</span>
  <div class="menu_card">
     <div class="nom">
@@ -53,7 +58,7 @@
         <div class="visible"><span class="prixbold">40€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card1">
     <div class="nom">
         <span class="fs_normal">Langouste rôtie </span><br>
         <span class="pdg_top over fs_small">Et ses légumes de saison</span>
@@ -61,7 +66,7 @@
         <div class="visible"><span class="prixbold">35€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card2">
     <div class="nom">
         <span class="fs_normal">Côte de boeuf Angus</span><br>
         <span class="pdg_top over fs_small">Et sa purée de panais</span>
@@ -69,6 +74,8 @@
         <div class="visible"><span class="prixbold">44€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
+ </div>
+ <div class="menu_container flex">
  <span class="brd_bottom">DESSERTS</span>
  <div class="menu_card">
     <div class="nom">
@@ -78,7 +85,7 @@
         <div class="visible"><span class="prixbold">18€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card1">
     <div class="nom">
         <span class="fs_normal">Crème brulée</span><br>
         <span class="pdg_top over fs_small">Revisitée</span>
@@ -86,17 +93,19 @@
         <div class="visible"><span class="prixbold">22€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card2">
     <div class="nom">
         <span class="fs_normal">Tiramisu </span><br>
         <span class="pdg_top over fs_small">À la noisette</span>
         </div>
         <div class="visible"><span class="prixbold">23€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div> 
+ </div>
+ </div>
+ 
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
-</div>
-<div class="footer flex">
+ </div>
+ <div class="footer flex">
     <span class="fs_normal white ffm">Oh my food</span>
     <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><span class="fs_smallbold white">Proposer un restaurant</span></div>
     <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><span class="fs_smallbold white mrg_left_footer">Devenir partenaire</span></div>
