--- a/menu.html
+++ b/menu.html
@@ -1,9 +1,11 @@
+<!DOCTYPE <html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="sass/design_tablet.css">
     <link rel="stylesheet" href="css/design_desktop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +19,8 @@
 <div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="/images/logo/ohmyfood@2x.svg" alt="logo"></div>
 <div class="img_menu"><img src="/images/restaurants/française.jpg" alt="logo" class="img_menu"></div>
  <div class="card_container flex menu">
- <span class="ffm fs_largebold">A la française</span><i class="far fa-heart heart_menu"></i>  
+ <span class="ffm fs_largebold">A la française</span><i class="far fa-heart heart_menu"></i> 
+ <div class ="menu_container flex">
 <span class="brd_bottom">ENTREES</span>
  <div class="menu_card">
     <div class="nom">
@@ -27,20 +30,22 @@
      <div class="visible"><span class="prixbold">35€</span></div>
      <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card1">
     <div class="nom">
         <span class="fs_normal">Velouté de légumes d'antan </span><br>
            <span class="pdg_top over fs_small">Carotte, panais, topinambour</span></div>    
         <div class="visible"><span class="prixbold">25€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card2">
     <div class="nom">
         <span class="fs_normal">Soupe à l'oignon </span><br>
            <span class="pdg_top over fs_small">Revisitée</span></div>    
         <div class="visible"><span class="prixbold">20€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
+</div> 
+<div class ="menu_container flex">
  <span class="brd_bottom">PLATS</span>
  <div class="menu_card">
     <div class="nom">
@@ -49,20 +54,22 @@
         <div class="visible"><span class="prixbold">40€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card2">
     <div class="nom">
         <span class="fs_normal">Magret de canard </span><br>
            <span class="pdg_top over fs_small">Et parmentier de pommes de terre</span></div>    
         <div class="visible"><span class="prixbold">35€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card3">
     <div class="nom">
         <span class="fs_normal">Pigeonneau d’Ille-et-Vilaine</span><br>
            <span class="pdg_top over fs_small">Sur son lit de gnocchis aux légumes</span></div>    
         <div class="visible"><span class="prixbold">44€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
+</div>
+<div class ="menu_container flex">
  <span class="brd_bottom">DESSERTS</span>
  <div class="menu_card">
     <div class="nom">
@@ -71,22 +78,24 @@
         <div class="visible"><span class="prixbold">18€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card1">
     <div class="nom">
         <span class="fs_normal">Fondant au chocolat</span><br>
            <span class="pdg_top over fs_small">Revisité</span></div>    
         <div class="visible"><span class="prixbold">22€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div>
- <div class="menu_card">
+ <div class="menu_card2">
     <div class="nom">
         <span class="fs_normal">Millefeuille croustillant </span><br>
            <span class="pdg_top over fs_small">Myrtilles et pâte d’amande</span></div>    
         <div class="visible"><span class="prixbold">23€</span></div>
         <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
  </div> 
+</div>
  <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
 </div>
+
 <div class="footer flex">
     <span class="fs_normal white ffm">Oh my food</span>
     <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><span class="fs_smallbold white">Proposer un restaurant</span></div>
