--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 </head>
 <body>
 
+    <span class="loading_spinner loader_quart"></span>
+
     <div class="logo_container">
-    <div class="logo"><img src="/images/logo/ohmyfood@2x.svg" alt="logo"></div>
+    <div class="logo"><span class="ffm fs_largelogo fw_largebold">Ohmyfood</span></div>
     </div>
     <div class="flex reservation_container">
-    <div class="location flex"><span class="fs_smallbold brd_bottom"><i class="fas fa-map-marker-alt"></i>Paris,Belleville</span></div>
+    <div class="location flex"><span class="fs_smallbold brd_bottom1"><i class="fas fa-map-marker-alt"></i>Paris,Belleville</span></div>
     <div class="reservation flex">
         <span class="fs_largebold">Reservez le menu qui <br><span class="fs_largebold mrg_2">vous convient</span></span>  
         <span>Decouvrez des restaurants d'exception,<br><span class="mrg_2">sélectionner par nos soins</span></span>    
@@ -49,7 +51,7 @@
 </div>
 
 <div class="container_card">
-<div class="card_container flex">
+<div class="card_container flex card_container_index">
 <span class="fs_largebold absolute">Restaurant</span>
 <a href="/menu.html"><div class="card">
 <div class="img_container img_gout flex">
@@ -98,11 +100,13 @@
 
 <div class="footer_container">
 <footer class="footer flex">
-<span class="fs_normal white ffm ellipsis">Oh my food</span>
+ <div class="ohmyfood_container">   
+<span class="fs_normal white ffm ">Oh my food</span>
+ </div>
 <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><span class="fs_smallbold white">Proposer un restaurant</span></div>
 <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><span class="fs_smallbold white mrg_left_footer">Devenir partenaire</span></div>
 <div class="footer_items"><span class="fs_smallbold white">Mentions legales</span></div>
-<div class="footer_items"><span class="fs_smallbold white">Contact</span></div>
+<div class="footer_items"><span class="fs_smallbold white"><a href="mailto: contact@ohmyfood.com" class="white">Contact</a></span></div>
 </footer>
 </div>
 </body>
