--- a/menu.html
+++ b/menu.html
@@ -1,115 +1,184 @@
 <!DOCTYPE <html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sass/main.css">
-    <link rel="stylesheet" href="sass/design_tablet.css">
-    <link rel="stylesheet" href="css/design_desktop.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/cd18562bc3.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="sass/main.css" />
+    <link rel="stylesheet" href="sass/design_tablet.css" />
+    <link rel="stylesheet" href="css/design_desktop.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/cd18562bc3.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
-</head>
-<body>
-      <div class="logo_container">
-<div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><h1 class="ffm fs_largelogo fw_largebold">Ohmyfood</h1></div>
-</div>
-<div class="img_menu_container">
-<div class="img_menu"><img src="/images/restaurants/française.jpg" alt="logo" class="img_menu"></div>
-</div>
- <div class="card_container flex menu center card_container_menu menu_border grid">
- <h1 class="ffm fs_largebold absolute_title">A la française</h1><i class="far fa-heart heart_menu"></i>
- <div class ="menu_container flex center menu_container1">
-<h2 class="brd_bottom">ENTREES</h2>
- <div class="menu_card">
-    <div class="nom">
-     <h3 class="fs_normal">Tartare de poulpe acidulé </h3><br>
-     <span class="pdg_top over fs_small">Aux zestes d'orange</span>
-   </div>
-     <div class="visible"><span class="prixbold">35€</span></div>
-     <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card1 ">
-    <div class="nom">
-        <h3 class="fs_normal">Velouté de légumes d'antan </h3><br>
-           <span class="pdg_top over fs_small">Carotte, panais, topinambour</span></div>    
-        <div class="visible"><span class="prixbold">25€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card2">
-    <div class="nom">
-        <h3 class="fs_normal">Soupe à l'oignon </h3><br>
-           <span class="pdg_top over fs_small">Revisitée</span></div>    
-        <div class="visible"><span class="prixbold">20€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
-</div> 
-<div class ="menu_container flex center menu_container_2">
- <h2 class="brd_bottom">PLATS</h2>
- <div class="menu_card">
-    <div class="nom">
-        <h3 class="fs_normal">Coquilles Saint-Jacques </h3><br>
-           <span class="pdg_top over fs_small">Accompagnées d'une purée de panais</span></div>    
-        <div class="visible"><span class="prixbold">40€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card2">
-    <div class="nom">
-        <h3 class="fs_normal">Magret de canard </h3><br>
-           <span class="pdg_top over fs_small">Et parmentier de pommes de terre</span></div>    
-        <div class="visible"><span class="prixbold">35€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card3">
-    <div class="nom">
-        <h3 class="fs_normal">Pigeonneau d’Ille-et-Vilaine</h3><br>
-           <span class="pdg_top over fs_small">Sur son lit de gnocchis aux légumes</span></div>    
-        <div class="visible"><span class="prixbold">44€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
-</div>
-<div class ="menu_container flex center menu_container3 menu_container3_span">
- <h2 class="brd_bottom">DESSERTS</h2>
- <div class="menu_card">
-    <div class="nom">
-        <h3 class="fs_normal">Pétales de violettes glacés </h3><br>
-           <span class="pdg_top over fs_small">Et purée de noisettes</span></div>    
-        <div class="visible"><span class="prixbold">18€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card1">
-    <div class="nom">
-        <h3 class="fs_normal">Fondant au chocolat</h3><br>
-           <span class="pdg_top over fs_small">Revisité</span></div>    
-        <div class="visible"><span class="prixbold">22€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card2">
-    <div class="nom">
-        <h3 class="fs_normal">Millefeuille croustillant </h3><br>
-           <span class="pdg_top over fs_small">Myrtilles et pâte d’amande</span></div>    
-        <div class="visible"><span class="prixbold">23€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div> 
-</div>
- <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
-</div>
-
-<div class="footer_container">
-   <footer class="footer flex">
-    <div class="ohmyfood_container">   
-   <h4 class="fs_normal white ffm ">Oh my food</h4>
+  </head>
+  <body>
+    <div class="logo_container">
+      <div class="logo">
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <h1 class="ffm fs_largelogo fw_largebold">Ohmyfood</h1>
+      </div>
     </div>
-   <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><h4 class="fs_smallbold white">Proposer un restaurant</h4></div>
-   <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><h4 class="fs_smallbold white mrg_left_footer">Devenir partenaire</h4></div>
-   <div class="footer_items"><h4 class="fs_smallbold white">Mentions legales</h4></div>
-   <div class="footer_items"><h4 class="fs_smallbold white">Contact</h4></div>
-   </footer>
-   </div>
-</body>
+    <div class="img_menu_container">
+      <div class="img_menu img_française">
+        
+      </div>
+    </div>
+    <div
+      class="
+        card_container
+        flex
+        menu
+        center
+        card_container_menu
+        menu_border
+        grid
+      "
+    >
+      <h2 class="ffm fs_largebold absolute_title">A la française</h2>
+      <i class="far fa-heart heart_menu"></i>
+      <div class="menu_container flex center menu_container1">
+        <h3 class="brd_bottom">ENTREES</h3>
+        <div class="menu_card">
+          <div class="nom">
+            <h4 class="fs_normal">Tartare de poulpe acidulé</h4>
+            <br />
+            <span class="pdg_top over fs_small">Aux zestes d'orange</span>
+          </div>
+          <div class="visible"><span class="prixbold">35€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card1">
+          <div class="nom">
+            <h4 class="fs_normal">Velouté de légumes d'antan</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Carotte, panais, topinambour</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">25€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card2">
+          <div class="nom">
+            <h4 class="fs_normal">Soupe à l'oignon</h4>
+            <br />
+            <span class="pdg_top over fs_small">Revisitée</span>
+          </div>
+          <div class="visible"><span class="prixbold">20€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </div>
+      <div class="menu_container flex center menu_container_2">
+        <h3 class="brd_bottom">PLATS</h3>
+        <div class="menu_card">
+          <div class="nom">
+            <h4 class="fs_normal">Coquilles Saint-Jacques</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Accompagnées d'une purée de panais</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">40€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card2">
+          <div class="nom">
+            <h4 class="fs_normal">Magret de canard</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Et parmentier de pommes de terre</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">35€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card3">
+          <div class="nom">
+            <h4 class="fs_normal">Pigeonneau d’Ille-et-Vilaine</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Sur son lit de gnocchis aux légumes</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">44€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </div>
+      <div
+        class="menu_container flex center menu_container3 menu_container3_span"
+      >
+        <h3 class="brd_bottom">DESSERTS</h3>
+        <div class="menu_card">
+          <div class="nom">
+            <h4 class="fs_normal">Pétales de violettes glacés</h4>
+            <br />
+            <span class="pdg_top over fs_small">Et purée de noisettes</span>
+          </div>
+          <div class="visible"><span class="prixbold">18€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card1">
+          <div class="nom">
+            <h4 class="fs_normal">Fondant au chocolat</h4>
+            <br />
+            <span class="pdg_top over fs_small">Revisité</span>
+          </div>
+          <div class="visible"><span class="prixbold">22€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card2">
+          <div class="nom">
+            <h4 class="fs_normal">Millefeuille croustillant</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Myrtilles et pâte d’amande</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">23€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </div>
+      <div class="btn_container flex">
+        <input
+          type="button"
+          value="Commander"
+          class="button fs_smallbold btn_menu fs_smallbold"
+        />
+      </div>
+    </div>
+
+    <div class="footer_container">
+      <footer class="footer flex">
+        <div class="ohmyfood_container">
+          <h5 class="fs_normal white ffm">Oh my food</h5>
+        </div>
+        <div class="footer_items flex">
+          <i class="fas fa-utensils white fs_footer_icon"></i>
+          <h4 class="fs_smallbold white">Proposer un restaurant</h4>
+        </div>
+        <div class="footer_items flex">
+          <i class="fas fa-hands-helping white fs_footer_icon"></i>
+          <h5 class="fs_smallbold white mrg_left_footer">Devenir partenaire</h5>
+        </div>
+        <div class="footer_items">
+          <h5 class="fs_smallbold white">Mentions legales</h5>
+        </div>
+        <div class="footer_items">
+          <h5 class="fs_smallbold white">
+            <a href="mailto: contact@ohmyfood.com" class="white">Contact</a>
+          </h5>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
