--- a/menu1.html
+++ b/menu1.html
@@ -1,149 +1,230 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="sass/main.css">
-    <link rel="stylesheet" href="css/design_desktop.css">
-    <link rel="stylesheet" href="sass/design_tablet.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/cd18562bc3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="sass/main.css" />
+    <link rel="stylesheet" href="css/design_desktop.css" />
+    <link rel="stylesheet" href="sass/design_tablet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/cd18562bc3.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
-</head>
-<body>
-  <div class="logo_container">
-    <div class="logo"><a href="index.html"><i class="fas fa-arrow-left"></i></a><h1 class="ffm fs_largelogo fw_largebold">Ohmyfood</h1></div>
+  </head>
+  <body>
+    <div class="logo_container">
+      <div class="logo">
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <h1 class="ffm fs_largelogo fw_largebold">Ohmyfood</h1>
+      </div>
     </div>
     <div class="img_menu_container">
-<div class="img_menu"><img src="/images/restaurants/note.jpg" alt="logo" class="img_menu mrg_img_menu"></div>
-</div>
- <div class="card_container flex menu center card_container_menu menu_border grid">
- <h1 class="ffm fs_largebold absolute_title">La note enchantée</h1>
- <svg id='heart' height="0" width="0">
-    <defs>
-      <clipPath id="svgPath">
-        <path
-          d="M20,35.09,4.55,19.64a8.5,8.5,0,0,1-.13-12l.13-.13a8.72,8.72,0,0,1,12.14,0L20,10.79l3.3-3.3a8.09,8.09,0,0,1,5.83-2.58,8.89,8.89,0,0,1,6.31,2.58,8.5,8.5,0,0,1,.13,12l-.13.13Z" />
-      </clipPath>
-    </defs>
-  </svg>
-  
-  <div class="container">
-    <svg width="40" height="40" viewBox="0 0 40 40" class='stroke'>
-      <path
-        d="M20,35.07,4.55,19.62a8.5,8.5,0,0,1-.12-12l.12-.12a8.72,8.72,0,0,1,12.14,0L20,10.77l3.3-3.3A8.09,8.09,0,0,1,29.13,4.9a8.89,8.89,0,0,1,6.31,2.58,8.5,8.5,0,0,1,.12,12l-.12.12ZM10.64,7.13A6.44,6.44,0,0,0,6.07,18.19L20,32.06,33.94,18.12A6.44,6.44,0,0,0,34,9l0,0a6.44,6.44,0,0,0-4.77-1.85A6,6,0,0,0,24.83,9L20,13.78,15.21,9A6.44,6.44,0,0,0,10.64,7.13Z" />
-    </svg>
-  
-    <a href='#' class='clip'></a>
-  </div>
- <div class="menu_container flex center menu_container1 mrg_top_menu_container">
-<h2 class="brd_bottom">ENTREES</h2>
- <div class="menu_card">
-    <div class="nom">
-    <h3 class="fs_normal">Ravioles de foie gras </h3><br>
-    <span class="pdg_top over fs_small">Accompagnés de leur crème à la truffe</span>
+      <div class="img_menu img_note">
+        
+      </div>
     </div>
-    <div class="visible"><span class="prixbold">25€</span></div>
-    <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
-    </div>
- <div class="menu_card1">
-    <div class="nom">
-    <h3 class="fs_normal">Caviar osciètre  </h3><br>
-    <span class="pdg_top over fs_small">Sur blini à la farine de blé noir</span>
-    </div>
-    <div class="visible"><span class="prixbold">35€</span></div>
-    <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
-</div>
- <div class="menu_card2">
-    <div class="nom">
-        <h3 class="fs_normal">Homard et espuma de potiron </h3><br>
-        <span class="pdg_top over fs_small">Mariné aux zestes d'orange</span>
-        </div>
-        <div class="visible"><span class="prixbold">20€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
+    <div
+      class="
+        card_container
+        flex
+        menu
+        center
+        card_container_menu
+        menu_border
+        grid
+      "
+    >
+      <h2 class="ffm fs_largebold absolute_title">La note enchantée</h2>
+      <svg id="heart" height="0" width="0">
+        <defs>
+          <clipPath id="svgPath" class="svg_size">
+            <path
+              d="M20,35.09,4.55,19.64a8.5,8.5,0,0,1-.13-12l.13-.13a8.72,8.72,0,0,1,12.14,0L20,10.79l3.3-3.3a8.09,8.09,0,0,1,5.83-2.58,8.89,8.89,0,0,1,6.31,2.58,8.5,8.5,0,0,1,.13,12l-.13.13Z"
+            />
+          </clipPath>
+        </defs>
+      </svg>
 
- <div class="menu_card3">
-    <div class="nom">
-        <h3 class="fs_normal">Foie gras de canard cuit entier </h3><br>
-        <span class="pdg_top over fs_small">Confiture de figue et pain toasté</span>
-        </div>
-        <div class="visible"><span class="prixbold">35€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
-</div>
-<div class="menu_container flex center menu_container2">
- <h2 class="brd_bottom">PLATS</h2>
- <div class="menu_card">
-    <div class="nom">
-        <h3 class="fs_normal">Noix de coquilles Saint-Jacques </h3><br>
-        <span class="pdg_top over fs_small">Sur lit de purée de céleri-rave</span>
-        </div>
-        <div class="visible"><span class="prixbold">40€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card1">
-    <div class="nom">
-        <h3 class="fs_normal">Langoustine poêlée </h3><br>
-        <span class="pdg_top over fs_small">Purée de patate douce</span>
-        </div>
-        <div class="visible"><span class="prixbold">35€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card2">
-    <div class="nom">
-        <h3 class="fs_normal">Mijoté de queue de boeuf  </h3><br>
-        <span class="pdg_top over fs_small">Et riz sauvage aux zestes de citron</span>
-        </div>
-        <div class="visible"><span class="prixbold">44€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
-</div>
-<div class="menu_container flex center menu_container3 menu_container3_span mrg_top_menu_container">
- <h2 class="brd_bottom">DESSERTS</h2>
- <div class="menu_card">
-    <div class="nom">
-        <h3 class="fs_normal">Macaron noisette et chocolat </h3><br>
-        <span class="pdg_top over fs_small">Glace au caramel brun et sel de Guérande</span>
-        </div>
-        <div class="visible"><span class="prixbold">18€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card1">
-    <div class="nom">
-        <h3 class="fs_normal">Baba au rhum revisité  </h3><br>
-        <span class="pdg_top over fs_small">Avec son coulis de citron</span>
-        </div>
-        <div class="visible"><span class="prixbold">22€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div>
- <div class="menu_card2">
-    <div class="nom">
-        <h3 class="fs_normal">Tarte au citron meringuée </h3><br>
-        <span class="pdg_top over fs_small">Déstructurée</span>
-        </div>
-        <div class="visible"><span class="prixbold">23€</span></div>
-        <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
- </div> 
-</div>
- <div class="btn_container flex"><input type="button" value="Commander" class="button fs_smallbold btn_menu fs_smallbold"></div>
-</div>
+      <div class="container">
+        <svg width="40" height="40" viewBox="0 0 40 40" class="stroke">
+          <path
+            d="M20,35.07,4.55,19.62a8.5,8.5,0,0,1-.12-12l.12-.12a8.72,8.72,0,0,1,12.14,0L20,10.77l3.3-3.3A8.09,8.09,0,0,1,29.13,4.9a8.89,8.89,0,0,1,6.31,2.58,8.5,8.5,0,0,1,.12,12l-.12.12ZM10.64,7.13A6.44,6.44,0,0,0,6.07,18.19L20,32.06,33.94,18.12A6.44,6.44,0,0,0,34,9l0,0a6.44,6.44,0,0,0-4.77-1.85A6,6,0,0,0,24.83,9L20,13.78,15.21,9A6.44,6.44,0,0,0,10.64,7.13Z"
+          />
+        </svg>
 
-<div class="footer_container">
-  <footer class="footer flex">
-   <div class="ohmyfood_container">   
-  <h4 class="fs_normal white ffm ">Oh my food</h4>
-   </div>
-  <div class="footer_items flex"><i class="fas fa-utensils white fs_footer_icon"></i><h4 class="fs_smallbold white">Proposer un restaurant</h4></div>
-  <div class="footer_items flex"><i class="fas fa-hands-helping white fs_footer_icon"></i><h4 class="fs_smallbold white mrg_left_footer">Devenir partenaire</h4></div>
-  <div class="footer_items"><h4 class="fs_smallbold white">Mentions legales</h4></div>
-  <div class="footer_items"><h4 class="fs_smallbold white">Contact</h4></div>
-  </footer>
-  </div>
-</body>
+        <a href="#" class="clip"></a>
+      </div>
+      <div
+        class="
+          menu_container
+          flex
+          center
+          menu_container1
+          mrg_top_menu_container
+        "
+      >
+        <h3 class="brd_bottom">ENTREES</h3>
+        <div class="menu_card">
+          <div class="nom">
+            <h4 class="fs_normal">Ravioles de foie gras</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Accompagnés de leur crème à la truffe</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">25€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card1">
+          <div class="nom">
+            <h4 class="fs_normal">Caviar osciètre</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Sur blini à la farine de blé noir</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">35€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card2">
+          <div class="nom">
+            <h4 class="fs_normal">Homard et espuma de potiron</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Mariné aux zestes d'orange</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">20€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+
+        <div class="menu_card3">
+          <div class="nom">
+            <h4 class="fs_normal">Foie gras de canard cuit entier</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Confiture de figue et pain toasté</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">35€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </div>
+      <div class="menu_container flex center menu_container2">
+        <h2 class="brd_bottom">PLATS</h2>
+        <div class="menu_card">
+          <div class="nom">
+            <h4 class="fs_normal">Noix de coquilles Saint-Jacques</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Sur lit de purée de céleri-rave</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">40€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card1">
+          <div class="nom">
+            <h4 class="fs_normal">Langoustine poêlée</h4>
+            <br />
+            <span class="pdg_top over fs_small">Purée de patate douce</span>
+          </div>
+          <div class="visible"><span class="prixbold">35€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card2">
+          <div class="nom">
+            <h4 class="fs_normal">Mijoté de queue de boeuf</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Et riz sauvage aux zestes de citron</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">44€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </div>
+      <div
+        class="
+          menu_container
+          flex
+          center
+          menu_container3 menu_container3_span
+          mrg_top_menu_container
+        "
+      >
+        <h2 class="brd_bottom">DESSERTS</h2>
+        <div class="menu_card">
+          <div class="nom">
+            <h4 class="fs_normal">Macaron noisette et chocolat</h4>
+            <br />
+            <span class="pdg_top over fs_small"
+              >Glace au caramel brun et sel de Guérande</span
+            >
+          </div>
+          <div class="visible"><span class="prixbold">18€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card1">
+          <div class="nom">
+            <h4 class="fs_normal">Baba au rhum revisité</h4>
+            <br />
+            <span class="pdg_top over fs_small">Avec son coulis de citron</span>
+          </div>
+          <div class="visible"><span class="prixbold">22€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+        <div class="menu_card2">
+          <div class="nom">
+            <h4 class="fs_normal">Tarte au citron meringuée</h4>
+            <br />
+            <span class="pdg_top over fs_small">Déstructurée</span>
+          </div>
+          <div class="visible"><span class="prixbold">23€</span></div>
+          <div class="slidegreen"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </div>
+      <div class="btn_container flex">
+        <input
+          type="button"
+          value="Commander"
+          class="button fs_smallbold btn_menu fs_smallbold"
+        />
+      </div>
+    </div>
+
+    <div class="footer_container">
+      <footer class="footer flex">
+        <div class="ohmyfood_container">
+          <h5 class="fs_normal white ffm">Oh my food</h5>
+        </div>
+        <div class="footer_items flex">
+          <i class="fas fa-utensils white fs_footer_icon"></i>
+          <h5 class="fs_smallbold white">Proposer un restaurant</h5>
+        </div>
+        <div class="footer_items flex">
+          <i class="fas fa-hands-helping white fs_footer_icon"></i>
+          <h5 class="fs_smallbold white mrg_left_footer">Devenir partenaire</h5>
+        </div>
+        <div class="footer_items">
+          <h5 class="fs_smallbold white">Mentions legales</h5>
+        </div>
+        <div class="footer_items">
+          <h5 class="fs_smallbold white">
+            <a href="mailto: contact@ohmyfood.com" class="white">Contact</a>
+          </h5>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
