responsive + modification placement icones

--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
       "
     >
     
-      <h2 class="ffm fs_largebold absolute_title">A la française <div class="heart heart_menu">
+      <h2 class="ffm fs_largebold absolute_title">A la française <div class="heart heart_menu mrg_heart_menu">
         <svg
           class="filled"
           xmlns="http://www.w3.org/2000/svg"
