--- a/menu1.html
+++ b/menu1.html
@@ -44,7 +44,7 @@
         grid
       "
     >
-    <h2 class="ffm fs_largebold absolute_title">La note enchantée <div class="heart heart_menu">
+    <h2 class="ffm fs_largebold absolute_title">La note enchantée <div class="heart heart_menu heart_responsive">
       <svg
         class="filled"
         xmlns="http://www.w3.org/2000/svg"
