--- a/menu2.html
+++ b/menu2.html
@@ -1,3 +1,4 @@
+<!DOCTYPE <html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -44,7 +45,7 @@
         grid
       "
     >
-    <h2 class="ffm fs_largebold absolute_title">La palette du goût <div class="heart heart_menu">
+    <h2 class="ffm fs_largebold absolute_title">La palette du goût <div class="heart heart_menu heart_responsive">
       <svg
         class="filled"
         xmlns="http://www.w3.org/2000/svg"
@@ -75,7 +76,7 @@
         />
       </svg>
     </div></h2>
-  </div>
+  
       <div class="menu_container flex center menu_container1">
         <h3 class="brd_bottom">ENTREES</h3>
         <div class="menu_card">
@@ -189,6 +190,7 @@
         />
       </div>
     </div>
+  </div>
 
     <div class="footer_container">
       <footer class="footer flex">
