--- a/menu3.html
+++ b/menu3.html
@@ -46,7 +46,7 @@
         grid
       "
     >
-    <h2 class="ffm fs_largebold absolute_title">Le délice des sens <div class="heart heart_menu">
+    <h2 class="ffm fs_largebold absolute_title">Le délice des sens <div class="heart heart_menu heart_responsive">
       <svg
         class="filled"
         xmlns="http://www.w3.org/2000/svg"
