--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -261,7 +261,7 @@
         </div>
         <div class="footer_items">
           <h5 class="fs_smallbold white">
-            <a href="mailto: contact@ohmyfood.com" class="white">Contact</a>
+            <a href="mailto:contact@ohmyfood.com" class="white">Contact</a>
           </h5>
         </div>
       </footer>
